src/objects/NDTRS_Drugs__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <label>Alias Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Sequence__c</fullName>
        <label>Item Sequence</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>NDTRS Drug</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Group_Name__c</columns>
        <columns>Item_Name__c</columns>
        <columns>Alias_Name__c</columns>
        <columns>Item_Code__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NDTRS Drugs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NDTRS Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>